--- a/medium-hard/index.html
+++ b/medium-hard/index.html
@@ -614,7 +614,8 @@ Source
 easy_test_solution
 </td>
 <td style="text-align:left;">
-<a href="easy_test_solution/main.R">my animint 1</a>
+<a href="https://github.com/suhaani-agarwal/r/tree/main/easy_test_solution/easy_test_solution/main.R">gradient
+descent</a>
 </td>
 </tr>
 <tr>
@@ -632,7 +633,8 @@ easy_test_solution
 medium_test_solution
 </td>
 <td style="text-align:left;">
-<a href="medium_test_solution/main.R">my animint 2</a>
+<a href="https://github.com/suhaani-agarwal/r/tree/main/medium_test_solution/medium_test_solution/main.R">diamonds
+dataset</a>
 </td>
 </tr>
 </tbody>
